[package]
name = "imgDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

readme = "README.md"
description = "A image DB library"

[lib]
name = "imgDB"

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.1.6", features = ["derive"] }
crc32fast = "1.3.2"
digest = "0.10.6"
glob = "0.3.1"
image = "0.24.5"
rand = "0.8.5"
rexiv2 = "0.10.0"
sha2 = "0.10.6"

[dev-dependencies]
criterion = "0.4"
