[package]
name = "imgDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

readme = "README.md"
description = "A image DB library"

[lib]
name = "imgDB"

[dependencies]
argh = "0.1.10"
base64 = "0.21.0"
blake2 = "0.10.6"
crc32fast = "1"
digest = "0.10.6"
glob = "0.3.1"
image = { version = "0.24.5", features = ["webp", "avif", "webp-encoder"] }
rand = "0.8.5"
rexiv2 = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
upon = "0.6.0"

[dev-dependencies]
criterion = "0.4"
