[package]
name = "imgDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

readme = "README.md"
description = "A image DB library"

[lib]
name = "imgDB"

[dependencies]
argh = "0.1"
base64 = "0.21"
blake2 = "0.10"
crc32fast = "1"
digest = "0.10"
glob = "0.3"
image = { version = "0.24", features = ["webp", "avif", "webp-encoder"] }
rand = "0.8"
rayon = "1"
rexiv2 = "0.10"
ripemd = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
upon = "0.6"

[dev-dependencies]
criterion = "0.4"
